# ark

./: .gitignore  Cargo.toml  README_DATA_PIPELINE.md
data/markdown/: ATP_3-50.21_Survival.md  Canadian_Cold_Weather.md  Canadian_Military_Fieldcraft.md  Deadfalls_and_Snares.md  FM21-76_SurvivalManual.md  FM_21-60_Visual_Signals.md  FM_21-76-1_Survival_Evasion_Recovery.md  FM_31-70_Basic_Cold_Weather.md  FM_4-25.11_First_Aid.md  SODIS_Safe_Water_Manual.md  ST_31-91B_SF_Medical_Handbook.md  Survival_Austere_Medicine.md  USMC_Winter_Survival.md  Where_There_Is_No_Doctor.md
data/markdown_clean/: ATP_3-50.21_Survival.md  Canadian_Cold_Weather.md  Canadian_Military_Fieldcraft.md  Deadfalls_and_Snares.md  FM21-76_SurvivalManual.md  FM_21-60_Visual_Signals.md  FM_21-76-1_Survival_Evasion_Recovery.md  FM_31-70_Basic_Cold_Weather.md  FM_4-25.11_First_Aid.md  SODIS_Safe_Water_Manual.md  ST_31-91B_SF_Medical_Handbook.md  Survival_Austere_Medicine.md  USMC_Winter_Survival.md  Where_There_Is_No_Doctor.md
scripts/: clean_markdown.py  download-survival-pdfs.sh  download_reranker.py  download_reranker_base.py  download_reranker_data.py  download_reranker_missing.py  ingest_markdown.py  ingest_pdf.py  pdf_to_md.py
src/: main.rs
